add button hover and bold text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main-card">
         <div class="top-card">
             <div class="top-card-left">
-                <div class="top-banner">Projobs</div>
+                <div class="top-banner"><strong>Projobs</strong></div>
                 <h1 class="top-banner-title">Hi Diogo, here's what you get by upgrading to Projobs.</h1>
                 <div class="top-card-text">
                     <div class="first-container">
@@ -29,7 +29,7 @@
                     <p class="third-item">Gain exclusive access to expert knowledge</p>
                 </div>
                 </div>
-                <div class="top-card-button">Get Projobs</div>
+                <div class="top-card-button"><strong>Get Projobs</strong></div>
             </div>
         <div class="top-card-right">
             <img src="images/top-card-image.svg" alt = "top card svg" class="top-card-svg"/>
