--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
 
     <div class="main-card">
         <div class="top-card">
-            <div class="top-card-left">
+            <div class="top-card-left w-50">
                 <div class="top-banner"><strong>Projobs</strong></div>
                 <h1 class="top-banner-title">Hi Diogo, here's what you get by upgrading to Projobs.</h1>
                 <div class="top-card-text">
-                    <div class="first-container">
-                    <i class="fa fa-check"></i>
-                    <p class="first-item">Boost your visibility among recruiters</p>
-                </div>
-                <div class="second-container">
-                    <i class="fa fa-check"></i>
-                    <p class="second-item">Set jobseeker criteria for you next job</p>
-                </div>
-                <div class="third-container">
-                    <i class="fa fa-check"></i>
-                    <p class="third-item">Gain exclusive access to expert knowledge</p>
-                </div>
+                    <div class="text-container">
+                        <i class="fa fa-check"></i>
+                        <p class="text-container-item">Boost your visibility among recruiters</p>
+                    </div>
+                    <div class="text-container">
+                        <i class="fa fa-check"></i>
+                        <p class="text-container-item">Set jobseeker criteria for you next job</p>
+                    </div>
+                    <div class="text-container">
+                        <i class="fa fa-check"></i>
+                        <p class="text-container-item">Gain exclusive access to expert knowledge</p>
+                    </div>
                 </div>
                 <div class="top-card-button"><strong>Get Projobs</strong></div>
             </div>
-        <div class="top-card-right">
-            <img src="images/top-card-image.svg" alt = "top card svg" class="top-card-svg"/>
+            <div class="top-card-right w-50">
+                <img src="images/top-card-image.svg" alt = "top card svg" class="top-card-svg"/>
+            </div>
         </div>
-        </div>
-        <div class="bottom-cards">
-            <div class="left-bottom-card">
+        <div class="bottom-card-container">
+            <div class="bottom-card">
                 <div class="left-bottom-card-left">
                     <img src="/images/icons8-search.svg" alt="bottom left svg" class="bottom-left-svg"/>
                 </div>
@@ -46,7 +46,7 @@
                     <div class="left-bottom-card-action">Show profile visitors<i class="fa fa-long-arrow-right"></i></div>
                 </div>
             </div>
-            <div class="right-bottom-card">
+            <div class="bottom-card">
                 <div class="right-bottom-card-left">
                     <img src="/images/icons8-search.svg" alt="bottom left svg" class="bottom-right-svg"/>
                 </div>
