added carousel skeleton with horizontal scroll and hidden overflow

--- a/index.html
+++ b/index.html
@@ -128,12 +128,31 @@
         >
           Write job applications
         </div>
-        <div id="top-carousel-button" class="top-carousel-button" onclick="carouselBtn">
+        <div
+          id="top-carousel-button"
+          class="top-carousel-button"
+          onclick="carouselBtn"
+        >
           Prepare for interviews
         </div>
-        <div id="top-carousel-button" class="top-carousel-button" onclick="carouselBtn">
+        <div
+          id="top-carousel-button"
+          class="top-carousel-button"
+          onclick="carouselBtn"
+        >
           Get guidance
         </div>
+      </div>
+      <div class="carousel-container" id="carousel-container">
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card"></div>
       </div>
     </div>
     <script src="./index.js"></script>
