finished carousel and rest of layout

--- a/index.html
+++ b/index.html
@@ -126,33 +126,134 @@
           class="top-carousel-button"
           onclick="carouselBtn"
         >
-          Write job applications
+          <strong>Write job applications</strong>
         </div>
         <div
           id="top-carousel-button"
           class="top-carousel-button"
           onclick="carouselBtn"
         >
-          Prepare for interviews
+          <strong>Prepare for interviews</strong>
         </div>
         <div
           id="top-carousel-button"
           class="top-carousel-button"
           onclick="carouselBtn"
         >
-          Get guidance
+          <strong>Get guidance</strong>
         </div>
       </div>
       <div class="carousel-container" id="carousel-container">
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
-        <div class="carousel-card" id="carousel-card"></div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong>Knowledge to boost your success.</strong>
+            </p>
+            <p class="carousel-card-subtitle">
+              Handy summaries of non-fiction books that help you get ahead.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong
+                >Use the "story generator" to create a personalised cover
+                letter.</strong
+              >
+            </p>
+            <p class="carousel-card-subtitle">
+              Use the Karrierehelden story generator to create a cover letter.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong>Your digital career companion.</strong>
+            </p>
+            <p class="carousel-card-subtitle">
+              PocketCoach® is the digital coach designed to boost your career.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong>Communicating confidently - webinar for women</strong>
+            </p>
+            <p class="carousel-card-subtitle">
+              Find out how to communicate best at work, e.g. when presenting.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong>Learn how other people see you.</strong>
+            </p>
+            <p class="carousel-card-subtitle">
+              Retorio uses the latest AI technoloty to analyse your effect on
+              others.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong>Successful negotiations webinar</strong>
+            </p>
+            <p class="carousel-card-subtitle">
+              Insights into occupational negotiations, conflicts and
+              relationships.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title"><strong>Rhetoric webinar</strong></p>
+            <p class="carousel-card-subtitle">
+              Learn all about rhetoric, the art of persuasion
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong>Knowladge to boost your success.</strong>
+            </p>
+            <p class="carousel-card-subtitle">
+              Advice for job searches, applications, interviews and
+              negotiations.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-card" id="carousel-card">
+          <img src="/images/placeholder-starwards.jpeg" />
+          <div class="carousel-text-box">
+            <p class="carousel-card-title">
+              <strong>Finding your dream job - webinar</strong>
+            </p>
+            <p class="carousel-card-subtitle">
+              Handy summaries of non-fiction books that help you get ahead.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div
+        id="bottom-carousel-btn"
+        onclick="carouselBtn"
+        class="top-carousel-button"
+      >
+        <strong>View All</strong>
       </div>
     </div>
     <script src="./index.js"></script>
