fix: small html/css/js fixes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
+      type='text/css'
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
@@ -99,18 +100,21 @@
           </div>
           <div class="carousel-title-right">
             <button
-              class="top-banner carousel-banner"
+              class="user-flag"
               id="toggle-btn"
               onclick="btn"
             >
-              <strong>Projobs <i id="arrow-up"></i></strong>
+              <span>
+                Projobs 
+                <i id="projobs-fencing-banner-arrow" class="fa fa-chevron-down"></i>
+              </span>
             </button>
           </div>
         </div>
-        <div id="hidden-tab" class="hidden-tab">
+        <div id="projobs-fencing-banner" class="projobs-fencing-banner">
           <i class="fa fa-close" id="fa fa-close" onclick=""></i>
           <h2 id="carousel-title-text">Be better prepared</h2>
-          <p class="hidden-tab-text">
+          <p class="projobs-fencing-banner-text">
             Take advantage of exclusive Projobs content, such as webinars and
             online tutorials.
           </p>
