changed all tags for respective button tag and remove border of button to mantain design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
-      type='text/css'
+      type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
@@ -16,7 +16,7 @@
     <div class="main-card">
       <div class="top-card">
         <div class="top-card-left w-50">
-          <div class="top-banner"><strong>Projobs</strong></div>
+          <div class="top-banner">Projobs</div>
           <h1 class="top-banner-title">
             Hi Diogo, here's what you get by upgrading to Projobs.
           </h1>
@@ -40,7 +40,7 @@
               </p>
             </div>
           </div>
-          <div class="top-card-button"><strong>Get Projobs</strong></div>
+          <button class="top-card-button">Get Projobs</button>
         </div>
         <div class="top-card-right w-50">
           <img
@@ -99,14 +99,13 @@
             </h1>
           </div>
           <div class="carousel-title-right">
-            <button
-              class="user-flag"
-              id="toggle-btn"
-              onclick="btn"
-            >
+            <button class="user-flag" id="toggle-btn" onclick="btn">
               <span>
-                Projobs 
-                <i id="projobs-fencing-banner-arrow" class="fa fa-chevron-down"></i>
+                Projobs
+                <i
+                  id="projobs-fencing-banner-arrow"
+                  class="fa fa-chevron-down"
+                ></i>
               </span>
             </button>
           </div>
@@ -118,34 +117,34 @@
             Take advantage of exclusive Projobs content, such as webinars and
             online tutorials.
           </p>
-          <div class="top-card-button"><strong>Get Projobs</strong></div>
+          <button class="top-card-button">Get Projobs</button>
         </div>
       </div>
       <p class="subtitle-carousel">
         Check out our guidance to help you get the job you want:
       </p>
       <div class="carousel-nav" id="carousel-nav">
-        <div
+        <button
           id="top-carousel-button"
           class="top-carousel-button"
           onclick="carouselBtn"
         >
-          <strong>Write job applications</strong>
-        </div>
-        <div
+          Write job applications
+        </button>
+        <button
           id="top-carousel-button"
           class="top-carousel-button"
           onclick="carouselBtn"
         >
-          <strong>Prepare for interviews</strong>
-        </div>
-        <div
+          Prepare for interviews
+        </button>
+        <button
           id="top-carousel-button"
           class="top-carousel-button"
           onclick="carouselBtn"
         >
-          <strong>Get guidance</strong>
-        </div>
+          Get guidance
+        </button>
       </div>
       <div class="carousel-container" id="carousel-container">
         <div class="carousel-card" id="carousel-card">
@@ -252,13 +251,13 @@
           </div>
         </div>
       </div>
-      <div
+      <button
         id="bottom-carousel-btn"
         onclick="carouselBtn"
         class="top-carousel-button"
       >
-        <strong>View All</strong>
-      </div>
+        View All
+      </button>
     </div>
     <script src="./index.js"></script>
   </body>
