added arrows for carousel, no functionality

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
         </button>
       </div>
       <div class="carousel-container" id="carousel-container">
+          <i class="fa fa-arrow-left" id="fa-arrow-left"></i>
+          <i class="fa fa-arrow-right" id="fa-arrow-right"></i>
         <div class="carousel-card" id="carousel-card">
           <img src="/images/placeholder-starwards.jpeg" />
           <div class="carousel-text-box">
